--- a/the_enchanted_plate.html
+++ b/the_enchanted_plate.html
@@ -45,7 +45,7 @@
             <!-- Starters -->
             <h2>ENTREES</h2>
             <div class="line"></div>
-            <div class="menu-section">
+            <section class="menu-section">
                 <div class="visible-dish-wrap first">
                     <div class="dish-wrap">
                         <div class="dish">
@@ -102,11 +102,11 @@
                         </div>
                     </div>
                 </div>
-            </div>
+            </section>
             <!-- Main dish -->
             <h2>MAIN DISH</h2>
             <div class="line"></div>
-            <div class="menu-section">
+            <section class="menu-section">
                 <div class="visible-dish-wrap fifth">
                     <div class="dish-wrap">
                         <div class="dish">
@@ -149,11 +149,11 @@
                         </div>
                     </div>
                 </div>
-            </div>
+            </section>
             <!-- Desserts -->
             <h2>DESSERTS</h2>
             <div class="line"></div>
-            <div class="menu-section">
+            <section class="menu-section">
                 <div class="visible-dish-wrap eighth">
                     <div class="dish-wrap">
                         <div class="dish">
@@ -196,7 +196,7 @@
                         </div>
                     </div>
                 </div>
-            </div>
+            </section>
             <button class="order">Order</button>
         </article>
     </main>
