--- a/bastille.html
+++ b/bastille.html
@@ -45,7 +45,7 @@
             <!-- Starters -->
             <h2>ENTREES</h2>
             <div class="line"></div>
-            <div class="menu-section">
+            <section class="menu-section">
                 <div class="visible-dish-wrap first">
                     <div class="dish-wrap">
                         <div class="dish">
@@ -88,11 +88,11 @@
                         </div>
                     </div>
                 </div>
-            </div>
+            </section>
             <!-- Main dish -->
             <h2>MAIN DISH</h2>
             <div class="line"></div>
-            <div class="menu-section">
+            <section class="menu-section">
                 <div class="visible-dish-wrap fourth">
                     <div class="dish-wrap">
                         <div class="dish">
@@ -135,11 +135,11 @@
                         </div>
                     </div>
                 </div>
-            </div>
+            </section>
             <!-- Desserts -->
             <h2>DESSERTS</h2>
             <div class="line"></div>
-            <div class="menu-section">
+            <section class="menu-section">
                 <div class="visible-dish-wrap seventh">
                     <div class="dish-wrap">
                         <div class="dish">
@@ -182,7 +182,7 @@
                         </div>
                     </div>
                 </div>
-            </div>
+            </section>
             <button class="order">Order</button>
         </article>
     </main>
