--- a/the_full_palette.html
+++ b/the_full_palette.html
@@ -46,7 +46,7 @@
             <!-- Starters -->
             <h2>ENTREES</h2>
             <div class="line"></div>
-            <div class="menu-section">
+            <section class="menu-section">
                 <div class="visible-dish-wrap first">
                     <div class="dish-wrap">
                         <div class="dish">
@@ -89,11 +89,11 @@
                         </div>
                     </div>
                 </div>
-            </div>
+            </section>
             <!-- Main dish -->
             <h2>MAIN DISH</h2>
             <div class="line"></div>
-            <div class="menu-section">
+            <section class="menu-section">
                 <div class="visible-dish-wrap fourth">
                     <div class="dish-wrap">
                         <div class="dish">
@@ -136,11 +136,11 @@
                         </div>
                     </div>
                 </div>
-            </div>
+            </section>
             <!-- Desserts -->
             <h2>DESSERTS</h2>
             <div class="line"></div>
-            <div class="menu-section">
+            <section class="menu-section">
                 <div class="visible-dish-wrap seventh">
                     <div class="dish-wrap">
                         <div class="dish">
@@ -183,7 +183,7 @@
                         </div>
                     </div>
                 </div>
-            </div>
+            </section>
             <button class="order">Order</button>
         </article>
     </main>
