--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
             <!-- Section Navigation -->
             <nav>
-                <a href="ohmyfood.html" class="navigation">
+                <a href="index.html" class="navigation">
                     <img src="/images/logo/ohmyfood.png" alt="the logo">
                 </a>
                 <div class="search-btn-wrap">
