--- a/the_full_palette.html
+++ b/the_full_palette.html
@@ -26,7 +26,7 @@
         <!-- Navigation -->
         <nav>
             <div class="rstnt-navigation">
-                <a href="ohmyfood.html">
+                <a href="index.html">
                     <i class="fas fa-arrow-left"></i>
                 </a>
                 <img src="/images/logo/ohmyfood@2x.svg" alt="logo">
