--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
                 <div class="rst-ad">
                     <figure>
                         <a target="_self" href="the_enchanted_plate.html">
-                            <img src="./images/restaurants-main-page/stil-u2Lp8tXIcjw-unsplash.webp"
+                            <img src="images/restaurants-main-page/stil-u2Lp8tXIcjw-unsplash.webp"
                                 alt="the enchanted plate">
                             <span>New</span>
                         </a>
