--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                 <div class="rst-ad">
                     <figure>
                         <a target="_self" href="the_full_palette.html">
-                            <img src="images/restaurants-main-page/jay-wennington-N_Y88TWmGwA-unsplash.webp"
+                            <img src="images/restaurants-main-page/jay-wennington-N_Y88TWmGwA-unsplash.png"
                                 alt="the full palette">
                             <span>New</span>
                         </a>
